@@ -1,6 +1,13 @@
 Changes with Apache 1.3.20
 
   *) Introduce NUL device pipes for stdin and stdout for the parent Win32
+  *) Added a new API for NetWare to allow Apache the chance to unimport
+     module symbols before it shuts down.
+	   void ap_os_dso_unsym(void *handle, const char *symname)
+	 This is necessary so that Apache on NetWare can shutdown cleanly
+	 in an error condition such as a failure while reading the .CONF
+	 file. [Brad Nicholes <BNICHOLES@novell.com>]
+
      service process.  This solves bugs such as PR7198 that report 
      "dup2(stdin) failed" when trying to use piped logs.  [William Rowe]
 
